--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/shuding/nextra-docs-template#readme",
   "dependencies": {
     "@ensdomains/ens-avatar": "0.2.5",
-    "@xmtp/react-sdk": "1.4.0",
+    "@xmtp/react-sdk": "^1.3.7",
     "next": "^13.0.6",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
