--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "nextra": "latest",
     "nextra-theme-docs": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "web3.storage": "^4.5.5"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
