--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/shuding/nextra-docs-template#readme",
   "dependencies": {
     "@ensdomains/ens-avatar": "0.2.5",
-    "@xmtp/react-sdk": "^1.3.7",
+    "@xmtp/react-sdk": "^2.2.5",
     "@xmtp/xmtp-js": "^11.1.1",
     "next": "^13.0.6",
     "nextra": "latest",
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@types/node": "18.11.10",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "webpack": "^5.89.0"
   }
 }
