--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@ensdomains/ens-avatar": "0.2.5",
     "@xmtp/react-sdk": "^1.4.0",
-    "@xmtp/xmtp-js": "^11.1.1",
+    "@xmtp/xmtp-js": "^v11.3.0-beta.4",
     "next": "^13.0.6",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
