--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ensdomains/ens-avatar": "0.2.5",
     "@xmtp/react-sdk": "^1.4.0",
     "@xmtp/xmtp-js": "^v11.3.0-beta.7",
+    "inter-ui": "^3.19.3",
     "next": "^13.0.6",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
