--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/shuding/nextra-docs-template#readme",
   "dependencies": {
-    "@ensdomains/ens-avatar": "latest",
+    "@ensdomains/ens-avatar": "0.2.5",
     "@xmtp/react-sdk": "^3.0.0",
     "@xmtp/xmtp-js": "^v11.3.0-beta.10",
     "inter-ui": "^3.19.3",
